fixed filter checkboxes alignment

--- a/injected.scss
+++ b/injected.scss
@@ -8,6 +8,7 @@
 	}
 
 	input[type=checkbox] {
+		margin: 0;
 		margin-right: .3em;
 		vertical-align: middle;
 	}
